--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Zoom</title>
 </head>
 <body>
-    
+    <div class="container">
+    <header>
+        <a href="">
+            <i class="fas fa-th"></i>
+            <span>Speaker View</span>
+        </a>
+        <a href="">
+            <i class="fas fa-expand-arrows-alt"></i>
+        </a>
+    </header>
+    </div>
 </body>
 </html>
