--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Zoom</title>
 </head>
+
 <body>
     <div class="container">
+
     <header>
         <a href="">
             <i class="fas fa-th"></i>
@@ -19,6 +21,205 @@
             <i class="fas fa-expand-arrows-alt"></i>
         </a>
     </header>
+
+    <main>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/437-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Marco</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/76-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Emanuela</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/984-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Beppe</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/355-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Tommaso</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/76-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Emanuela</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/76-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Emanuela</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/76-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Emanuela</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/76-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Emanuela</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/76-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Emanuela</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/437-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Marco</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/437-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Marco</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/437-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Marco</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/437-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Marco</span>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="assets/img/437-200x200.jpg" alt="profilephoto">
+            <div class="label">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Marco</span>
+            </div>
+        </div>
+    </main>
     </div>
 </body>
 </html>
