--- a/index.html
+++ b/index.html
@@ -220,6 +220,103 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div>
+          <a href="">
+            <div>
+              <i class="fas fa-microphone"></i>
+
+              <div>Mute</div>
+            </div>
+
+            <div>
+              <i class="fas fa-angle-up"></i>
+            </div>
+          </a>
+
+          <a href="">
+            <div>
+              <i class="fas fa-video"></i>
+
+              <div>Stop Video</div>
+            </div>
+
+            <div>
+              <i class="fas fa-angle-up"></i>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <div>
+              <i class="fas fa-user-plus"></i>
+
+              <div>Invite</div>
+            </div>
+          </a>
+
+          <a href="">
+            <div>
+              <i class="fas fa-user-friends"></i>
+
+              <div>Manage Partecipants</div>
+            </div>
+          </a>
+
+          <a href="">
+            <div>
+              <i class="fas fa-chart-bar"></i>
+
+              <div>Polling</div>
+            </div>
+          </a>
+
+          <a href="">
+            <div>
+              <i class="fas fa-share-square"></i>
+
+              <div>Share Screen</div>
+            </div>
+
+            <div>
+              <i class="fas fa-angle-up"></i>
+            </div>
+          </a>
+
+          <a href="">
+            <div>
+              <i class="fas fa-comment"></i>
+
+              <div>Chat</div>
+            </div>
+          </a>
+
+          <a href="">
+            <div>
+              <i class="fas fa-record-vinyl"></i>
+
+              <div>Record</div>
+            </div>
+          </a>
+
+          <a href="">
+            <div>
+              <i class="fas fa-th-large"></i>
+
+              <div>Breakout Rooms</div>
+            </div>
+          </a>
+
+          <a href="">
+            <div>
+              <i class="fas fa-ellipsis-h"></i>
+
+              <div>More</div>
+            </div>
+          </a>
+        </div>
+        <div><a class="end" href="">End meeting</a></div>
+      </footer>
     </div>
 </body>
 </html>
